--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="description" content="Pokémon Pokédex" />
+    <link rel="icon" href="pokemon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=VT323&display=swap">
     <title>Pokédex</title>
   </head>
