--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,19 @@
     <link rel="icon" href="pokemon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=VT323&display=swap">
     <title>Pokédex</title>
+    <!-- SPA for gh-pages using HashRouter-->
+    <script type="text/javascript">
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
