--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Pokémon Pokédex" />
-    <link rel="icon" href="pokemon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/pokemon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=VT323&display=swap">
     <title>Pokédex</title>
     <!-- SPA for gh-pages using HashRouter-->
     <script type="text/javascript">
       (function(l) {
         if (l.search[1] === '/' ) {
-          var decoded = l.search.slice(1).split('&').map(function(s) { 
+          var decoded = l.search.slice(1).split('&').map(function(s) {
             return s.replace(/~and~/g, '&')
           }).join('?');
           window.history.replaceState(null, null,
